# gill-rust

./: Cargo.toml  LICENSE  README.md
lib/: Cargo.toml
lib/src/: create_solana_client.rs  keypair.rs  lib.rs  rpc.rs  solana_client.rs  transaction.rs  utils.rs
main/: Cargo.toml
main/src/: create_solana_client.rs  lib.rs  rpc.rs
