[package]
name = "gill"
version = "0.0.1"
edition = "2024"

[dependencies]
solana-client="2.2.7"
solana-commitment-config="2.2.1"
solana-pubkey="2.2.1"
solana-keypair="2.2.1"
solana-instruction="2.2.1"
solana-hash="2.2.1"
solana-compute-budget-interface="2.2.1"
solana-message="2.2.1"
solana-transaction="2.2.1"
solana-signature="2.2.1"
solana-rpc-client-api="2.2.1"
anyhow="^1.0"
