[package]
name = "branchia"
version = "0.0.1"
edition = "2024"
description = "A Rust implementation of the solana gill library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ubadineke/branchia"
keywords = ["solana", "gill", "blockchain"]
authors = ["ubadineke <ubadinekeprince@gmail.com>"]
homepage = "https://github.com/ubadineke/branchia"

[dependencies]
solana-client="2.2.7"
solana-commitment-config="2.2.1"
solana-pubkey="2.2.1"
solana-keypair="2.2.1"
solana-instruction="2.2.1"
solana-hash="2.2.1"
solana-compute-budget-interface="2.2.1"
solana-message="2.2.1"
solana-transaction="2.2.1"
solana-signature="2.2.1"
solana-rpc-client-api="2.2.1"
solana-signer="2.2.1"
solana-program="2.2.1"
anyhow="^1.0"
dirs = "6.0.0"
url = "2.5.4"
solana-rent = "2.2.1"
spl-token = "8.0.0"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
borsh = "1.5.7"
mpl-token-metadata = "5.1.0"
spl-associated-token-account = "7.0.0"
